[gd_scene load_steps=10 format=3 uid="uid://gj5u75jowqao"]

[ext_resource type="Script" uid="uid://co1cthyv0rw8s" path="res://intro_assets/scenes/title_screen.gd" id="1_kkiv1"]
[ext_resource type="Texture2D" uid="uid://8v1acvpwk6ng" path="res://intro_assets/scenes/Title Screen.png" id="2_kkiv1"]
[ext_resource type="Texture2D" uid="uid://beg6vch1w6x1m" path="res://intro_assets/scenes/Start Button.png" id="3_3qjvw"]
[ext_resource type="Texture2D" uid="uid://ckteciclnpehu" path="res://intro_assets/scenes/Continue Button.png" id="4_7giny"]
[ext_resource type="Texture2D" uid="uid://c12upho0uxmrv" path="res://intro_assets/scenes/QUIT Button.png" id="6_14sta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkiv1"]
size = Vector2(161, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_giji5"]
size = Vector2(164, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30pxk"]
size = Vector2(163, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rkxv"]
size = Vector2(167, 77)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_kkiv1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1.0
offset_right = 1281.0
offset_bottom = 721.0
texture = ExtResource("2_kkiv1")
expand_mode = 1

[node name="new" type="Area2D" parent="."]

[node name="TextureRect2" type="TextureRect" parent="new"]
offset_left = 541.0
offset_top = 230.0
offset_right = 720.0
offset_bottom = 305.0
texture = ExtResource("3_3qjvw")

[node name="newgame" type="CollisionShape2D" parent="new"]
position = Vector2(627.5, 266.5)
shape = SubResource("RectangleShape2D_kkiv1")

[node name="continue" type="Area2D" parent="."]

[node name="TextureRect3" type="TextureRect" parent="continue"]
offset_left = 547.0
offset_top = 341.0
offset_right = 726.0
offset_bottom = 416.0
texture = ExtResource("4_7giny")

[node name="continue" type="CollisionShape2D" parent="continue"]
position = Vector2(628, 379.5)
shape = SubResource("RectangleShape2D_giji5")

[node name="music" type="Area2D" parent="."]
position = Vector2(633, 267)

[node name="TextureRect" type="TextureRect" parent="music"]
offset_left = -86.0
offset_top = 182.0
offset_right = 77.0
offset_bottom = 268.0

[node name="music" type="CollisionShape2D" parent="music"]
position = Vector2(-5.5, 223.5)
shape = SubResource("RectangleShape2D_30pxk")

[node name="quit" type="Area2D" parent="."]
position = Vector2(624, 483)

[node name="TextureRect4" type="TextureRect" parent="quit"]
offset_left = -80.0
offset_top = 79.0
offset_right = 99.0
offset_bottom = 154.0
texture = ExtResource("6_14sta")

[node name="exit" type="CollisionShape2D" parent="quit"]
position = Vector2(4.5, 114.5)
shape = SubResource("RectangleShape2D_5rkxv")

[connection signal="input_event" from="new" to="." method="_on_new_input_event"]
[connection signal="input_event" from="continue" to="." method="_on_continue_input_event"]
[connection signal="input_event" from="music" to="." method="_on_music_input_event"]
[connection signal="input_event" from="quit" to="." method="_on_quit_input_event"]
